# jafit

./: .gitattributes  .gitignore  README.md  jafit.py  noxfile.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
data/: .gitignore  AlNiCo_5.descending.tab  AlNiCo_5.tab  B(H).AlNiCo.Jesenik.tab  B(H).AlNiCo_5.tab  B(H).AlNiCo_9.tab  B(H).Altair_Flux.Example.csv  B(H).Ansys.AlNiCo_5-7.tab  B(H).Ansys.LNG37.tab  B(H).Ansys.LNG52.tab  B(H).Campbell.AlNiCo_5.tab  B(H).Ibrayeva.LNGT40.tab  B(H).Ibrayeva.LNGT72.tab  B(H).Jesenik.AlNiCo.tab  B(H).LNGT40.tab  B(H).LNGT72.tab  B(H).VegaTechnik.LNG37.tab  B(H).VegaTechnik.LNG60.tab  B(H).VegaTechnik.LNGT92.tab  README.md  bh-lng37.tab
jafit/: ja.py  jafit.py
src/: ja.py  jafit.py
src/jafit/: __main__.py  bh.py  interactive.py  io.py  ja.py  jafit.py  loss.py  mag.py  opt.py  util.py  vis.py
test-data/: README.md  bh-lng52.tab
validation/: comsol-2d-loop.mph
