[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "jafit"
authors = [
    {name = "Pavel Kirienko", email = "pavel.kirienko@zubax.com"},
]
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "numpy       ~= 2.0",
    "scipy       ~= 1.15",
    "matplotlib  ~= 3.10",
    "numba",  # For JIT compilation, not functionally significant
]

[project.scripts]
jafit = "jafit.jafit:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = { attr = "jafit.__version__" }

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["data", "data.*"]

# --------------------------------------------------  PYTEST  --------------------------------------------------
[tool.pytest.ini_options]
testpaths = "src"
python_files = "*.py"
log_level = "DEBUG"
log_cli_level = "WARNING"
log_cli = true
log_file = "pytest.log"
addopts = "--doctest-modules -v --ignore=noxfile.py"

# -------------------------------------------------- COVERAGE --------------------------------------------------
[tool.coverage.run]
data_file = ".coverage"
branch    = true
parallel  = true

# --------------------------------------------------  MYPY  --------------------------------------------------
[tool.mypy]
plugins = ["numpy.typing.mypy_plugin"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
show_error_context = true
mypy_path = []

[[tool.mypy.overrides]]
module = ["scipy", "scipy.*", "matplotlib", "numba", "traitlets.*", "dash", "dash.*", "plotly.*"]
ignore_missing_imports = true

# --------------------------------------------------  BLACK  --------------------------------------------------
[tool.black]
line-length = 120
target-version = ['py313']
include = '''
(jafit/.*\.pyi?$)
|
(noxfile.py$)
'''
